--- a/styles.css
+++ b/styles.css
@@ -335,6 +335,7 @@ footer .social-media {
     }
 
     #gallery .gallery-container img {
+        width: 100%;
         height: 300px;
         object-fit: cover;
     }
@@ -378,7 +379,60 @@ footer .social-media {
     }
 
     #gallery .gallery-container img {
-        height: 300px;
+        width: 100%;
+        height: 225px;
+        object-fit: cover;
+    }
+}
+
+
+
+
+
+/* MEDIA QUERY (xl) */
+@media screen and (min-width: 1200px) {
+    body{
+        background-color: var(--linen);
+    }
+    main {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    
+    #gallery .gallery-container {
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 1fr;
+        gap: 15px;
+    }
+
+    #gallery .gallery-container .image-one {
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    #gallery .gallery-container .image-two {
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    #gallery .gallery-container .image-three {
+        grid-column: 3;
+        grid-row: 1;
+    }
+
+    #gallery .gallery-container .image-four {
+        grid-column: 4;
+        grid-row: 1;
+    }
+
+    #gallery .gallery-container .image-five {
+        grid-column: 5;
+        grid-row: 1;
+    }
+
+    #gallery .gallery-container img {
+        width: 100%;
+        height: 150px;
         object-fit: cover;
     }
 }
