--- a/styles.css
+++ b/styles.css
@@ -86,34 +86,24 @@ table {
 /* GLOBAL STYLES (mobile first/small) */
 
 
-/* Font */
-h1, h2, p, a, li{
-    font-family: var(--font);
-}
-
-
 /* Making the heading text abit bold, allowing them to popout more */
-h2 {
+h2, h3 {
     font-weight: 500;
 }
-
-p {
-    font-weight: 250;
-}
-
 
 /* Section Line (Lines between sections)*/
 .section-line {
     border: 0;
     height: 2px;
     background-color: var(--champagne-gold);
-    margin: 25px 0 30px 0;
+    margin: 25px 0 35px 0;
 }
 
 
 /* Body */
 body{
-    width: 100%;
+    width: auto;
+    font-family: var(--font);
 }
 
 
@@ -193,7 +183,7 @@ main {
 #offerings section {
     background-color: var(--olive-green);
     color: var(--soft-white);
-    padding: 20px;
+    padding: 15px;
     margin-bottom: 20px;
     border-radius: 8px;
     line-height: 1.5;
@@ -202,9 +192,9 @@ main {
     box-shadow: 0 2px 8px var(--dark-charcoal);
 }
 
-#offerings section h2 {
+#offerings section h3 {
     color: var(--soft-white);
-    font-size: 1.6em;
+    font-size: 1.7em;
     padding-bottom: 0px;
     font-weight: bold;
 }
@@ -249,9 +239,10 @@ main {
 
 #gallery .gallery-container img {
     width: 100%;
-    height: 300px;
+    height: auto;
     object-fit: cover;
     border-radius: 8px;
+    
 }
 
 #gallery .gallery-container p {
@@ -259,6 +250,7 @@ main {
     font-style: italic;
     padding: 5px 0 10px 0;
     font-size: 0.9em;
+    font-weight: 500;
 }
 
 #gallery .full-gallery {
@@ -310,34 +302,39 @@ footer .social-media {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto auto auto;
         gap: 20px;
-        
     }
 
     #offerings h2 {
         grid-column: 1 / -1;
+        padding-bottom: 10px;
     }
     
     #offerings-one {
         grid-column: 1;
+        grid-row: 2;
     }
-    
+
     #offerings-two {
         grid-column: 2;
+        grid-row: 2;
     }
     
     #offerings-three {
         grid-column: 1 / -1;
+        grid-row: 3;
     }
 
+    #offerings section {
+        margin-bottom: 0;
+    }
+    
     #gallery .gallery-container {
         grid-template-columns: repeat(2, 1fr);
         gap: 15px;
     }
 
-    #gallery .gallery-container img {
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
+    #gallery .gallery-container p {
+        padding: 5px 11px 10px 11px;
     }
 }
 
@@ -377,19 +374,13 @@ footer .social-media {
         grid-column: 2;
         grid-row: 2;
     }
-
-    #gallery .gallery-container img {
-        width: 100%;
-        height: 225px;
-        object-fit: cover;
-    }
 }
 
 
 
 
 
-/* MEDIA QUERY (xl) */
+/* MEDIA QUERY (XL) */
 @media screen and (min-width: 1200px) {
     body{
         background-color: var(--linen);
@@ -428,11 +419,5 @@ footer .social-media {
     #gallery .gallery-container .image-five {
         grid-column: 5;
         grid-row: 1;
-    }
-
-    #gallery .gallery-container img {
-        width: 100%;
-        height: 150px;
-        object-fit: cover;
     }
 }
