--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,7 @@ nav a {
 
 /* Main */
 main {
+    margin: 0 auto;
     padding: 0 25px 0 25px;
 }
 
@@ -307,6 +308,7 @@ footer .social-media {
 /* MEDIA QUERY (medium) */
 @media screen and (min-width: 600px) {
     main{
+        margin: 0 auto;
         padding: 0 30px 0 30px;
     }
 
@@ -355,6 +357,7 @@ footer .social-media {
 /* MEDIA QUERY (large) */
 @media screen and (min-width: 900px) {
     main{
+        margin: 0 auto;
         padding: 0 40px 0 40px;
     }
 
@@ -400,7 +403,6 @@ footer .social-media {
 /* MEDIA QUERY (XL) */
 @media screen and (min-width: 1200px) {
     main {
-        max-width: 1200px;
         margin: 0 auto;
         padding: 0 180px 0 180px;
     }
